<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a1611821.doctor_appointment_booking.LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/linearLayout2">



    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/card"
            android:padding="20dp"
            android:background="@color/colorSplashText"
            >

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="10dp"
                android:scaleX="2"
                android:scaleY="2"
                android:src="@mipmap/ic_socialcircle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.221"
                tools:layout_editor_absoluteX="30dp" />



            <EditText
                android:id="@+id/username"
                android:layout_width="246dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/user1"
                android:hint="Email"
                android:maxLines="1"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/profile_image"
                android:layout_margin="30dp"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/lock"
                android:hint="password"
                android:inputType="textPassword"
                android:maxLines="1"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username"
                />


            <Button
                android:onClick="doLogin"
                android:background="@drawable/button_drawable"
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="14dp"
                android:text="Login"
                android:textColor="#FFF"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/t1"
                />

            <TextView
                android:textColor="@color/colorAccent"
                android:padding="5dp"
                android:layout_marginLeft="30dp"
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot password?"
                app:layout_constraintRight_toLeftOf="@id/t2"
                app:layout_constraintLeft_toRightOf="@id/password"
                app:layout_constraintTop_toBottomOf="@+id/password"/>

            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:text="Not Registred?"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login" />

            <TextView
                android:id="@+id/Registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:clickable="true"
                android:onClick="launchRegistration"
                android:padding="2dp"
                android:paddingLeft="3dp"
                android:text="Register"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/t2"
                app:layout_constraintTop_toBottomOf="@+id/login" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>